--- a/src/index.module.css
+++ b/src/index.module.css
@@ -1,37 +1,33 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
+    'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
   background: rgb(243, 247, 250);
 }
-
 code {
-  font-family: "Courier New",
-    monospace;
+  font-family: 'Courier New', monospace;
 }
 .container {
   display: flex;
   justify-content: center;
   padding: 0 103px;
-  /* border: 1px solid black; */
 }
-
 .column {
   margin: 0 15px;
-  /* border: 1px solid black; */
 }
-
+@media (max-width: 768px) {
+  .column {
+    margin: 0 5px;
+  }
+}
 .leftColumn {
   width: 232px;
 }
-
 .rightColumn {
   width: 502px;
   display: flex;
   flex-direction: column;
 }
-
