--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -2,3 +2,9 @@
   display: block;
   margin: 50px auto;
 }
+@media (max-width: 768px) {
+  .main_logo {
+    display: block;
+    margin: 10px auto;
+  }
+}
