--- a/src/components/radio-group/radio-group.module.css
+++ b/src/components/radio-group/radio-group.module.css
@@ -46,3 +46,23 @@ input[type='radio']:checked + label {
   border: 1px solid rgb(33, 150, 243);
   color: white;
 }
+
+@media (max-width: 768px) {
+  .radio-label {
+    text-align: center;
+    padding: 5px 5px;
+    border: 1px solid rgb(223, 229, 236);
+    cursor: pointer;
+    background: rgb(255, 255, 255);
+    width: 100%;
+    transition: background-color 0.3s ease;
+    color: rgb(74, 74, 74);
+    font-family: Open Sans;
+    font-size: 12px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    text-align: center;
+    text-transform: uppercase;
+  }
+}
