--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -1,3 +1,22 @@
-.alert-message{
+.alert-message {
   margin-top: 20px;
+}
+.progress-container {
+  position: absolute;
+  top: -20px;
+  left: 0;
+  width: 100%;
+}
+.button__show-more {
+  margin: 20px 0px;
+  width: 100%;
+  height: 50px;
+  color: rgb(255, 255, 255);
+  font-family: Open Sans;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0.5px;
+  text-align: center;
+  text-transform: uppercase;
 }
