--- a/src/components/radio-group/radio-group.module.css
+++ b/src/components/radio-group/radio-group.module.css
@@ -63,5 +63,8 @@ input[type='radio']:checked + label {
     letter-spacing: 0.5px;
     text-align: center;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 }
